[package]
name = "captcha-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-governor = "0.5.0"
actix-web = "4.4.0"
anyhow = "1.0.75"
blake3 = "1.5.0"
config-file = "0.2.3"
env_logger = "0.10.0"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.20"
magick_rust = "0.19.1"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
